# v

./: 35_FIXES_IMPLEMENTATION_SUMMARY.md  BENCHMARK_GUIDE.md  CENTRA-NF-v0.3.0-ROADMAP.md  CENTRA-NF-v0.4.0-IMPLEMENTATION.md  CENTRA-NF-v0.4.0-ROADMAP.md  CHANGELOG.md  COMPREHENSIVE_LAUNCH_READINESS_REPORT.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_COMPLETE.md  DEPLOYMENT_CHECKLIST_FINAL.md  DEPLOYMENT_OPERATIONS_MANUAL.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_VERIFICATION.md  HARDENING_COMPLETE.md  INTEGRATION_TEST_RESULTS.md  LAUNCH_DAY_PLAYBOOK.md  LAUNCH_PREPARATION_SUMMARY.md  MULTI_LANGUAGE_SDK_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_2_COMPLETION.md  PRE_LAUNCH_VERIFICATION_PROTOCOL.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_FINAL_REPORT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY.md  PUBLICATION_CHECKLIST.md  QUICK_START_SINGLE_SOURCE.md  README.md  SDK_BUILD_AND_TEST_GUIDE.md  SDK_FILE_STRUCTURE.md  SDK_INTEGRATION_GUIDE.md  SECURITY.md  SINGLE_SOURCE_OF_TRUTH.md  UNIVERSAL_SDK_DELIVERY.md  V0.4.0-COMPLETION-REPORT.md  centra_nf.h  errors_registry.json  integration_report.txt  (+5 more)
.github/workflows/: ci.yml
benches/: Cargo.toml  csm_datasets.rs
bindings/python/centra_nf/: __init__.py
bindings/python/cnf-quantum/: Cargo.toml  FIPS_COMPLIANCE.md
bindings/python/cnf-quantum/src/: dsa.rs  error.rs  kem.rs  lib.rs  utils.rs
core/runtime/: Cargo.toml
core/runtime/benches/: runtime_bench.rs
core/runtime/proptest-regressions/: control_flow.txt
core/runtime/src/: adaptive.rs  dag.rs  lib.rs  runtime.rs
core/runtime/tests/: adaptive_property.rs  csm_integration.rs  distributed_e2e_tests.rs  execution_tests.rs  gate10_determinism.rs  governance_e2e_tests.rs  self_repair.rs
core/security/: Cargo.toml
core/verifier/: Cargo.toml
core/verifier/src/: audit_chain.rs  compliance.rs  hoare.rs  lib.rs
core/verifier/tests/: verifier_tests.rs
crates/centra-nf/: Cargo-release-profile.toml  Cargo.toml  centra_nf.h
crates/centra-nf-cli/: Cargo.toml
crates/centra-nf-cli/src/: main.rs  tools.rs
crates/centra-nf-cli/tests/: cli_integration.rs  file_operations_e2e.rs
crates/centra-nf-lsp/: Cargo.toml
crates/centra-nf-lsp/src/: handler.rs
crates/centra-nf-lsp/tests/: integration_tests.rs
crates/centra-nf/src/: ffi.rs  lib.rs  python.rs  python_bindings.rs
crates/cnf-compiler/: Cargo.toml
crates/cnf-compiler/benches/: determinism_bench.rs  ir_bench.rs  lexer_bench.rs  parser_bench.rs
crates/cnf-compiler/proptest-regressions/: lexer.txt
crates/cnf-compiler/src/: ast.rs  ir.rs  lexer.rs  lib.rs  parser.rs
crates/cnf-compiler/tests/: csm_pipeline.rs  integration.rs  phase3_integration.rs  profile_division.rs
crates/cnf-entropy/: Cargo.toml
crates/cnf-entropy/src/: entropy.rs  lib.rs  symbol_graph.rs
crates/cnf-entropy/tests/: entropy_tests.rs  symbol_graph_tests.rs
crates/cnf-governance/: Cargo.toml
crates/cnf-governance/src/: access_control.rs  audit_authority.rs  data_sovereignty.rs  distributed_rules.rs  lib.rs  policy_engine.rs  regulatory.rs
crates/cnf-network/: Cargo.toml
crates/cnf-network/src/: circuit_breaker.rs  connection_pool.rs  distributed_dag.rs  error.rs  lib.rs  message_buffer.rs  node.rs  rate_limiter.rs  transport.rs
crates/cnf-quantum/: Cargo.toml
crates/cnf-quantum/src/: dsa.rs  error.rs  kem.rs  lib.rs  utils.rs
crates/cnf-quantum/tests/: quantum_e2e_tests.rs
crates/cnf-runtime/: Cargo.toml
crates/cnf-runtime/proptest-regressions/: formatter.txt
crates/cnf-runtime/src/: adaptive.rs  control_flow.rs  formatter.rs  ir.rs  lib.rs  runtime.rs  runtime_broken.rs  self_repair.rs
crates/cnf-runtime/tests/: adaptive.rs  csm_integration.rs  execution_tests.rs  governance_e2e_tests.rs  network_integration.rs  self_repair.rs  verification_dispatch_tests.rs
crates/cnf-security/: Cargo.toml
crates/cnf-security/src/: key_manager.rs  lib.rs
crates/cnf-stdlib/: Cargo.toml
crates/cnf-stdlib/src/: buffer.rs  collection.rs  compress.rs  convert.rs  crypto.rs  env.rs  format.rs  integrity.rs  io.rs  lib.rs  math.rs  string.rs  time.rs
crates/cnf-stdlib/tests/: stdlib.rs
crates/cnf-storage/src/: checkpoint.rs  lib.rs  storage.rs  wal.rs
crates/cnf-verifier/: Cargo.toml
crates/cnf-verifier/src/: assertion.rs  error.rs  hoare.rs  lib.rs  z3_bridge.rs
crates/cnf-verifier/tests/: verifier_tests.rs
crates/cobol-protocol-v154/: Cargo.toml
crates/cobol-protocol-v154/benches/: csm_bench.rs
crates/cobol-protocol-v154/src/: base4096.rs  bitpack.rs  dictionary.rs  error.rs  lib.rs  stream.rs  template.rs
crates/cobol-protocol-v154/tests/: csm_tests.rs  csm_unit.rs
docs/: CONTRACT.md  FIPS_ALIGNMENT.md  benchmarks.md  error-codes.md  lsp-features.md  specification.md
examples/: advanced_ops.cnf  control_flow.cnf  csm_demo.cnf  distributed_pipeline.cnf  governance_demo.cnf  governed_pipeline.cnf  io_demo.cnf  quantum_pipeline.cnf  test_c_ffi.c  test_cpp_ffi  test_cpp_ffi.cpp
extensions/network/: Cargo.toml
extensions/network/src/: connection_pool.rs  error.rs  lib.rs  message_buffer.rs  rate_limiter.rs  transport.rs  vector_clock.rs
extensions/policy/src/: audit_authority.rs  data_sovereignty.rs  error.rs  lib.rs  policy_engine.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_compress_csm.rs  fuzz_decompress_csm.rs  fuzz_roundtrip.rs  fuzz_stream_decode.rs
tools/: Cargo.toml
tools/src/: gen_errors.rs  master_orchestrator.rs
