[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "centra-nf"
version = "1.0.0"
description = "CENTRA-NF: Deterministic protocol-bound language system with military-grade security"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "CENTRA-NF Contributors", email = "support@centra-nf.org" }
]
keywords = [
    "compilation",
    "runtime",
    "cryptography",
    "post-quantum",
    "cobol",
    "determinism",
    "ffi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Systems Administration",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Repository = "https://github.com/centranf1/v"
Documentation = "https://centra-nf.org/docs"
Issues = "https://github.com/centranf1/v/issues"

[tool.maturin]
# Maturin configuration for building Python wheels from Rust FFI
# Universal SDK for deterministic data center operations

# Manifest path: Location of Cargo.toml for the main crate
manifest-path = "crates/centra-nf/Cargo.toml"

# Package location: Python module name = compiled extension name
module-name = "centra_nf.core"

# Enable Python bindings via PyO3
features = ["python"]

# PyO3 version and features
pyo3-version = "0.20"

# Supported Python versions
# Targets CPython 3.10-3.13 and PyPy 3.10
python-versions = ["cp310", "cp311", "cp312", "cp313", "pp310"]

# Bindings type
bindings = "pyo3"

# Build strategy: use PyO3 framework
strategy = "pyo3"

# ============================================================================
# MILITARY-GRADE OPTIMIZATION SETTINGS
# ============================================================================
#
# These settings maximize performance, minimize binary size, and ensure
# deterministic output per Military-Grade standards.
#

# Use release-lto profile for maximum optimization
# (defined in workspace Cargo.toml)
profile = "release-lto"

# Rust compiler flags for optimization
rustflags = [
    "-C", "target-cpu=generic",     # Portable across x86_64 systems
    "-C", "opt-level=3",            # Maximum optimization
    "-C", "lto=fat",                # Full link-time optimization
    "-C", "embed-bitcode=yes",      # Enable LTO
    "-C", "strip=yes",              # Strip symbols
]

# Skip specific platforms if needed
skip = [
    # "skip-aarch64"  # Uncomment to skip ARM64 builds
]

[tool.maturin.sdist]
# Control which files are included in source distributions
include = [
    { path = "README.md" },
    { path = "LICENSE" },
    { path = "crates/centra-nf/src", format = "tar" },
    { path = "crates/centra-nf/Cargo.toml" },
]

# Build settings for different platforms
[tool.maturin.linux]
# Linux-specific options
# Example: Use system libraries instead of bundled
maturin-version = "0.15.0"

[tool.maturin.macos]
# macOS-specific options
# Use system LLVM if available
minimum-macos-version = "10.13"

[tool.maturin.windows]
# Windows-specific options
# Statically link MSVC runtime

# Build configuration for development
[tool.maturin.dev]
# Development build options
debug = false  # Use release profile for dev builds
lto = "fat"

# Packaging metadata
[tool.wheel]
# Python wheel configuration
# Compatibility tags handled by maturin automatically

# Python tool configurations
[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false

# PyO3-specific settings
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
