[package]
name = "centra-nf-fuzz"
version = "1.0.0"
publish = false
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
cobol-protocol-v154 = { path = "../crates/cobol-protocol-v154" }
cnf-runtime = { path = "../crates/cnf-runtime" }

[[bin]]
name = "fuzz_compress_csm"
path = "fuzz_targets/fuzz_compress_csm.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decompress_csm"
path = "fuzz_targets/fuzz_decompress_csm.rs"
test = false
doc = false

[[bin]]
name = "fuzz_stream_decode"
path = "fuzz_targets/fuzz_stream_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false
