[package]
name = "cnf-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log = "0.4"
cnf-security = { path = "../cnf-security" }
cnf-compiler = { path = "../cnf-compiler" }
cnf-storage = { path = "../cnf-storage" }
cnf-stdlib = { path = "../cnf-stdlib" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
cnf-network = { path = "../cnf-network", optional = true }
cnf-verifier = { path = "../cnf-verifier", optional = true }
cnf-quantum = { path = "../cnf-quantum", optional = true }
cobol-protocol-v153 = { path = "../cobol-protocol-v153" }
hex = "0.4"
cobol-protocol-v154 = { path = "../cobol-protocol-v154" }

cnf-governance = { path = "../cnf-governance", optional = true }

[features]
network = ["cnf-network"]
verifier = ["cnf-verifier"]
quantum = ["dep:cnf-quantum", "serde", "serde_json"]
governance = ["dep:cnf-governance"]

[dev-dependencies]
criterion = "0.5"
cnf-compiler = { path = "../cnf-compiler" }
proptest = "1.10.0"

[[bench]]
name = "runtime_bench"
harness = false
