[package]
name = "cnf-entropy"
version = "1.0.0"
edition = "2021"
authors = ["CENTRA-NF Contributors"]
description = "Entropy analysis and optimization layer for CSM compression"
license = "Proprietary"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.0"

[lib]
name = "cnf_entropy"
path = "src/lib.rs"
