[package]
name = "cnf-network"
version = "1.0.0"
edition = "2021"
authors = ["CENTRA-NF Dev Team"]
license = "Proprietary"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
cnf-storage = { path = "../cnf-storage" }
cnf-compiler = { path = "../cnf-compiler" }

[lib]
name = "cnf_network"
