[package]
name = "cnf-quantum"
version = "0.8.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
rand = "0.8"
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
