[package]
name = "cnf-stdlib"
version = "1.0.0"
edition = "2021"

[dependencies]
cnf-security = { path = "../cnf-security" }
cobol-protocol-v153 = { path = "../cobol-protocol-v153" }
hex = "0.4"
adler = "1.0"
sha2 = "0.10"
aes-gcm = "0.10"
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
chrono = "0.4"
num_cpus = "1.16"
