[package]
name = "cnf-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
cnf-compiler = { path = "../cnf-compiler" }
cnf-storage = { path = "../cnf-storage" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# z3 crate ditambahkan di Fase 2:
# z3 = { version = "0.12", features = ["static-link-z3"] }