[package]
name = "cnf-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
cnf-compiler = { path = "../cnf-compiler" }
cnf-storage = { path = "../cnf-storage" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Z3 optional for Phase 2+ real SMT solving:
z3 = { version = "0.12", optional = true }

# HMAC for audit chain
hmac = "0.12"
sha2 = "0.10"

[features]
z3-solver = ["z3"]