[package]
name = "cobol-protocol-v154"
version = "0.1.0"
edition = "2021"
authors = ["CENTRA-NF Maintainers <maintainers@centra-nf.org>"]
description = "Compact Symbol Mapping (CSM) compression engine for CENTRA-NF. Deterministic, zero-unsafe, protocol-bound."
license = "MIT OR Apache-2.0"

[dependencies]
sha2 = "0.10"
crc32fast = "1.3"
parking_lot = "0.12"
thiserror = "1.0"
itertools = "0.14.0"

[dev-dependencies]
rand = "0.8"
