[package]
name = "cnf-network"
version = "1.0.0"
edition = "2021"
authors = ["CENTRA-NF Dev Team"]
license = "Proprietary"

[dependencies]
 hmac = "0.12"
 sha2 = "0.10"
 rand = "0.8"
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
cnf-storage = { path = "../cnf-storage" }
cnf-compiler = { path = "../cnf-compiler" }

# TLS support
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "macros", "time"] }
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"

[dev-dependencies]
rcgen = "0.9"

[lib]
name = "cnf_network"
